# nlp_dme_extractor

./: .gitignore  Dockerfile  README.md
csharp/: DmeExtractorAgent.sln  README.md
csharp/src/DmeExtractorAgent/: DmeExtractorAgent.csproj  EntryPoint.cs  appsettings.json
csharp/src/DmeExtractorAgent/Services/: ExtractionOrchestrator.cs  IClients.cs  NlpExtractorClient.cs  NotificationClient.cs  ServiceRegistration.cs
csharp/src/DmeExtractorAgent/Services/Http/: NlpExtractorClient.cs  NotificationClient.cs
csharp/src/DmeExtractorAgent/Web/: HttpServer.cs
csharp/tests/DmeExtractorAgent.Tests/: DmeExtractorAgent.Tests.csproj  EntryPointProcessTests.cs  ExtractionOrchestratorTests.cs  HttpServerIntegrationTests.cs  NlpExtractorClientTests.cs  NotificationClientTests.cs
demo/: drnote.txt  run_demo.ps1  run_demo.sh
python/: .dockerignore  README.md  pyproject.toml  pyvenv.cfg
python/src/dme/: config.py  nlp.py
python/tests/: conftest.py  test_core.py
src/app/: README.md  cli.py  service.py
src/dme/: core.py  extractor.py
src/dme/resources/: dme_config.json
src/output/: MRCONSO.RRF  MRSTY.RRF
src/output/QuickUMLS_SAMPLE_lowercase_UNQLITE/cui-semtypes.db/: cui.unqlite  semtypes.unqlite
src/output/QuickUMLS_SAMPLE_lowercase_UNQLITE/umls-simstring.db/: umls-terms.simstring  umls-terms.simstring.17.cdb  umls-terms.simstring.29.cdb
tests/: README.md  test_config.py  test_core_integration.py  test_extractor.py
